--- a/index.Rmd
+++ b/index.Rmd
@@ -5,6 +5,12 @@ date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 output:
   bookdown::gitbook: default
+  html_document:
+    self_contained: false
+    toc: true
+    toc_float: true
+    number_sections: true
+    theme: paper
 ---
 
 # jamovi Manual
