Add link to data

--- a/index.Rmd
+++ b/index.Rmd
@@ -12,3 +12,13 @@ documentclass: ltjsarticle
 
 jamovi (https://www.jamovi.org/) の利用マニュアルというか，教材のベータ版です。
 まだまだ，修正中。
+
+## データについて
+
+この教材で使用するデータは，https://github.com/yoshi-mjm/stat_jamovi/data にあります。また，これらのデータは，それぞれ，
+
+- Majima, Y. & Nakamura, H. (2020). Development of the Japanese Version of the Generic Conspiracist Beliefs Scale (GCBS‐J). Japanese Psychological Research. [Advance Online Publication] https://doi.org/10.1111/jpr.12267
+- 永井暁行 (2018). ソーシャルスキルと態度による大学生の友人との付き合い方の分類―友人関係による居場所感の違い―. 教育心理学研究, 66, 54-66. https://doi.org/10.5926/jjep.66.54
+
+を使用しています。
+なお，Majima & Nakamura (2020) については，全てのデータが https://osf.io/24w8u/ からダウンロードすることが可能です。
