--- a/ch03-ttest.Rmd
+++ b/ch03-ttest.Rmd
@@ -154,3 +154,77 @@ knitr::include_graphics("./img/03mean/t-test_06.png")
 ```
 
 両側検定と同じく有意になりました。この場合，変更されたのはp値の0.013のみで，t値，自由度はそのままの値です。分布の両側を棄却域にするよりも，片側を棄却域にする方が若干検出力が高くなります。この結果からは，女性の方が男性よりも「社会的居場所」得点が有意に高い（t(355)=2.24, p < .05)ことを示すことができます。このように両側と片側検定は仮説に応じて使い分けていきます。
+
+## 対応のある t 検定
+
+次に，同一の標本から複数回測定値を得た場合に行われる対応のある2群の t 検定について説明します。ここでは，Majima (2017) のデータを使い，フランカー課題において，中央のターゲット刺激と周辺刺激が一致している場合 (con) と，一致しない場合 (incon) とで，反応時間が異なるかどうかを分析していきます。
+なお，Majima (2017) では，試行の種類（一致・不一致）と，参加者の種別（学生・クラウドワーカー）を組み合わせた分析をしていますが，ここでは試行の種類のみに注目した比較を行うことにします。
+まずは，対応のない場合と同じように，基本統計量の算出から行っていきましょう。
+
+### 基本統計量の算出
+
+算出の手順は，対応のない場合と全く一緒なのですが，Majima (2017) では，全体の正答率が 0.8 以下である参加者を分析の対象外としています。
+ここでも，その手続きに従ってデータのフィルタリングを行います。
+フィルタリングの詳細は，第2章の 2.2 [jamovi の基本操作](https://yoshi-mjm.github.io/stat_jamovi/ch01-install-jamovi.html#jamovi-%E3%81%AE%E5%9F%BA%E6%9C%AC%E6%93%8D%E4%BD%9C) を見てください。
+
+このデータで，全体の正答率は，mean.correct.total という変数にありますので，この変数の値が 0.8 より大きいものを選びます。
+
+```{r fig.cap="参加者の選択"}
+knitr::include_graphics("./img/03mean/pairwise-filter.png")
+```
+
+では，つづいて記述統計量を計算します。
+今回対象となる変数は，一致試行の反応時間 (mean.RT.NoOutlier.con) および，不一致試行の反応時間 (mean.RT.NoOutlier.incon) の2つです。なお，この変数では，早すぎる反応と遅すぎる反応 (平均+3SD 以上) を除外することで，反応時間の分布の歪みに対処しています。つまり，外れ値 (Outlier) を除いているわけです（詳細は元論文を見て下さい）。
+
+```{r fig.cap="変数の選択"}
+knitr::include_graphics("./img/03mean/pairwise-descriptive_01.png")
+```
+
+また，対応のない t 検定の時に，データの可視化の方法としてヒストグラムを使いましたが，ここではもう一つの方法を使って見ましょう。それが，箱ひげ図 (Box plot) とバイオリン図 (Violin plot) です。
+箱ひげ図は，中央値を中心に，四分位点や外れ値の存在を可視化してくれる図です。しかし，これだけでは分布の形状が今ひとつよくわからないため，近年では，箱ひげ図に加えて，カーネル密度推定をプロットしたバイオリン図が使われるようになってきています。
+
+箱ひげ図，バイオリン図は，ヒストグラムと同様に， 作図 (Plots) メニューの中にあります。作図したい図にチェックを付けてください。また，バイオリン図の下にある Data というチェックは，この図に実際のデータを合わせてプロットするオプションです。ただ，同じ値が重複していると点が同じポイントに来てしまうので，少しずらして表示する (jitter) ことにします。
+
+```{r fig.cap="箱ひげ図とバイオリン図のオプション"}
+knitr::include_graphics("./img/03mean/pairwise-descriptive_02.png")
+```
+
+今回のデータについて，箱ひげ + バイオリン図にデータを重ねると，以下のようなグラフになります。
+
+```{r fig.cap="箱ひげ図とバイオリン図"}
+knitr::include_graphics("./img/03mean/pairwise-descriptive_03.png")
+```
+
+中心は 500 ms  付近にありますが，最大が 1200ms  以上となるなど，正方向にやや歪んだ分布であることがわかります（これは，反応時間の特徴的な分布です）。
+
+### 対応のある t 検定の実施
+
+では，続けて対応のある t 検定を行います。
+上の 4.1.2 にあるように，jamovi の t 検定には 3 種類のものがありますが，ここでは対応のある標本の t 検定 (Paired Samples T-Test) を選びます。
+
+```{r fig.cap="対応のある t 検定"}
+knitr::include_graphics("./img/03mean/pairwise-t-test_00.png")
+```
+
+対応のない t 検定と違い，対応のある t 検定は，原則として 1 人につき，2つの測定値が対になって存在します。そのため，対応のある t 検定では，そのペアを指定する必要があります。
+対になった変数は，Paired Variables のボックスに2つ並べて入れてやります（変数を2つ選択して，矢印ボタンをクリックすれば良いです）。
+
+```{r fig.cap="変数の選択"}
+knitr::include_graphics("./img/03mean/pairwise-t-test_01.png")
+```
+
+そして必要な統計量を選択します。例では，Student.の t，平均の差，効果量 (Cohen's d)，各変数の記述統計量が選択されています。
+
+```{r fig.cap="出力する統計量のの選択"}
+knitr::include_graphics("./img/03mean/pairwise-t-test_02.png")
+```
+
+この検定を行うと，結果は，以下のようになります。
+
+```{r fig.cap="対応のある t 検定の結果"}
+knitr::include_graphics("./img/03mean/pairwise-t-test_03.png")
+```
+
+結果から，$t(198) = 11.7, p < .001, Cohen's \; d = 0.83$，つまり一致試行と不一致試行で反応時間に有意な差が見られることがわかります。なお，ここで $t < 0, d < 0$ となっているのは，ペアにした2つ目の変数，すなわち不一致試行の方が，1つ目の変数である一致試行よりも反応時間が長いためです (618 ms. vs. 577ms)。
+しかし，両側検定で検定の対象となっている帰無仮説は，両群の平均値は等しい，というものですので，t の値は正負どちらでも良いということになります。
+
